k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meteo-proxy
  labels:
    app: meteo-proxy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: meteo-proxy
